--- a/relive-app/client/public/index.html
+++ b/relive-app/client/public/index.html
@@ -9,7 +9,7 @@
 			content="Web site created using create-react-app"
 		/>
 		<link rel="icon" type="image/png" href="./relive.png" />
-		<title>Relive</title>
+		<title>Relive-App</title>
 	</head>
 	<body>
 		<div id="root"></div>
